--- a/gwt-jsontype-processor/pom.xml
+++ b/gwt-jsontype-processor/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>gwt-jsontype-processor</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>gwtJsonTypeProcessor</name>
-<properties>
+  <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,4 +32,20 @@
   		<version>1.0.1</version>
   	</dependency>
   </dependencies>
+<build>
+    <plugins>
+        <plugin>
+            <!-- Configure the project to use java 8 version. -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+                <!-- Disable annotation processing for ourselves. -->
+                <compilerArgument>-proc:none</compilerArgument>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
