--- a/SmoothieAq/lib/logging.properties
+++ b/SmoothieAq/lib/logging.properties
@@ -1,6 +1,6 @@
 handlers= java.util.logging.ConsoleHandler
 
-.level= INFO
+.level= ALLX
 
 java.util.logging.SimpleFormatter.format=%2$s: %5$s %6$s\n
 
