--- a/SmoothieAq/pom.xml
+++ b/SmoothieAq/pom.xml
@@ -63,17 +63,17 @@
     <dependency>
     	<groupId>org.glassfish.jersey.containers</groupId>
     	<artifactId>jersey-container-servlet</artifactId>
-    	<version>2.26-b03</version>
+    	<version>2.26-B03</version>
     </dependency>
     <dependency>
     	<groupId>org.glassfish.jersey.media</groupId>
     	<artifactId>jersey-media-json-jackson</artifactId>
-    	<version>2.26-b03</version>
+    	<version>2.26-B03</version>
     </dependency>
     <dependency>
     	<groupId>com.intendia.gwt.autorest</groupId>
     	<artifactId>autorest-gwt</artifactId>
-    	<version>0.5</version>
+    	<version>0.7</version>
 		<exclusions>
 		    <exclusion>
             	<groupId>javax.ws.rs</groupId>
@@ -146,6 +146,16 @@
   		<groupId>jesperl.dk.smoothieaq</groupId>
   		<artifactId>SmoothieAq-db-processor</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.google.elemental2</groupId>
+  		<artifactId>elemental2-dom</artifactId>
+  		<version>1.0.0-RC1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.glassfish.jersey.media</groupId>
+  		<artifactId>jersey-media-sse</artifactId>
+  		<version>2.26-B03</version>
   	</dependency>
   </dependencies>
 
