--- a/SmoothieAq/src/main/webapp/WEB-INF/logging.properties
+++ b/SmoothieAq/src/main/webapp/WEB-INF/logging.properties
@@ -7,4 +7,4 @@ java.util.logging.SimpleFormatter.format=%2$s: %5$s %6$s\n
 java.util.logging.ConsoleHandler.level = FINE
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
-jesperl.dk.smoothieaq.level=FINE
+jesperl.level=FINE
