--- a/SmoothieAq/src/main/webapp/WEB-INF/logging.properties
+++ b/SmoothieAq/src/main/webapp/WEB-INF/logging.properties
@@ -4,7 +4,7 @@ handlers= java.util.logging.ConsoleHandler
 
 java.util.logging.SimpleFormatter.format=%2$s: %5$s %6$s\n
 
-java.util.logging.ConsoleHandler.level = FINE
+java.util.logging.ConsoleHandler.level = FINEST
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
-jesperl.level=FINE
+jesperl.level=FINEST
